--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -1,5 +1,5 @@
 upstream meusapaches{
-    server apache1 max_fails=3 fail_timeout=30s;
+    server apache1;
     server apache2;
     server apache3;
 }
